[gd_scene load_steps=6 format=3 uid="uid://c6dktl4tt3ats"]

[ext_resource type="Script" path="res://scripts/Isabela/Pedido_04/Node_pai_Pedido04.gd" id="1_m2cde"]
[ext_resource type="JSON" path="res://dialogues/Isabela/pedido_molenga.json" id="2_vm55v"]
[ext_resource type="Script" path="res://scripts/Isabela/Pedido_04/Caixa_Script_Pedido_04.gd" id="3_lfmcx"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="4_6ep80"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3h05k"]
content_margin_left = 24.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 24.0
bg_color = Color(0.827451, 0.623529, 0.984314, 1)
border_width_left = 8
border_width_top = 4
border_width_right = 4
border_width_bottom = 8
border_color = Color(0.54902, 0.254902, 0.776471, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Node_pai_pedido_04" type="Node2D"]
script = ExtResource("1_m2cde")
pedido_namorado = ExtResource("2_vm55v")

[node name="Caixa" type="Node2D" parent="."]
script = ExtResource("3_lfmcx")

[node name="Tela" type="CanvasLayer" parent="Caixa"]

[node name="PanelContainer" type="PanelContainer" parent="Caixa/Tela"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = 250.0
offset_right = 295.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 6
theme_override_styles/panel = SubResource("StyleBoxFlat_3h05k")

[node name="VBoxContainer" type="VBoxContainer" parent="Caixa/Tela/PanelContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Text" type="RichTextLabel" parent="Caixa/Tela/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.54902, 0.254902, 0.776471, 1)
bbcode_enabled = true
fit_content = true

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("4_6ep80")

[connection signal="fim_cena" from="Caixa" to="." method="_on_caixa_fim_cena"]
[connection signal="custom_signal_received" from="EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
